--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "//": "Do not install the Firefox driver to work around https://github.com/angular/webdriver-manager/issues/303.",
     "update-webdriver": "webdriver-manager update --gecko false",
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js
+    "protractor": "protractor e2e-tests/protractor.conf.js"
   }
 }
